Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,21 +36,28 @@
 
 <p>Email: <a href="mailto:yhwei09@gmail.com">yhwei09@gmail.com</a></p>
 
-<h2>
-<a id="求职意向" class="anchor" href="#%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>求职意向</h2>
+<h3>
+<a id="求职意向" class="anchor" href="#%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>求职意向</h3>
 
 <pre><code>产品相关职位
 </code></pre>
 
-<h2>
-<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h2>
+<h3>
+<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h3>
 
 <pre><code>2013/06     复旦大学  物理学学士
 * 复旦大学优秀学生 (3次，2009-2010）     
 * 复旦大学优秀毕业生奖学金 (2013)  
 </code></pre>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>
+<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h3>
+
+<pre><code>2014/01 – 2014/08 产品助理  百姓网（www.baixing.com） 上海
+</code></pre>
+
+<pre><code>2014/01 – 2014/08 产品助理  百姓网（www.baixing.com） 上海
+</code></pre>
 
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
