--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h4>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h4>
 
-<p>2013/06    复旦大学    物理学学士</p>
+<p>2013/06　　复旦大学　　物理学学士</p>
 
 <ul>
 <li>复旦大学优秀学生 (3次，2009-2010）<br>
@@ -56,12 +56,11 @@
 <h4>
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h4>
 
-<p><strong>2014/01 – 2014/08   产品助理  百姓网（www.baixing.com） 上海</strong>
-S 在WAP线数据不能全面反馈产品状况的情况下，对其分析整理进行有效监控：
-A 与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标; 与BI部门协作,在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系
-R 相关人员通过该数据体系能对各项重要功能的情况一目了然</p>
-
-<p>2014/01 – 2014/08 产品助理  百姓网（www.baixing.com） 上海</p>
+<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong>
+<em>WAP产品线：功能改进、数据监控</em>
+<strong>S</strong>在WAP线数据不能全面反馈产品状况的情况下，对其分析整理进行有效监控：
+<strong>A</strong>与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标; 与BI部门协作,在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系
+<strong>R</strong>相关人员通过该数据体系能对各项重要功能的情况一目了然</p>
 
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
