Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
 <p>Email: <a href="mailto:yhwei09@gmail.com">yhwei09@gmail.com</a></p>
 
-<h4>
-<a id="求职意向" class="anchor" href="#%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>求职意向</h4>
+<h5>
+<a id="求职意向" class="anchor" href="#%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>求职意向</h5>
 
 <p>产品相关职位</p>
 
-<h4>
-<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h4>
+<h5>
+<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h5>
 
 <p>2013/06　　复旦大学　　物理学学士</p>
 
@@ -53,14 +53,17 @@
 </li>
 </ul>
 
-<h4>
-<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h4>
+<h5>
+<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h5>
 
-<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong>
-<em>WAP产品线：功能改进、数据监控</em>
-<strong>S</strong>在WAP线数据不能全面反馈产品状况的情况下，对其分析整理进行有效监控：
-<strong>A</strong>与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标; 与BI部门协作,在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系
-<strong>R</strong>相关人员通过该数据体系能对各项重要功能的情况一目了然</p>
+<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong></p>
+
+<p><strong><em>WAP产品线：功能改进、数据监控</em></strong></p>
+
+<ul>
+<li><p><strong>S</strong> 在WAP线数据庞杂不能有效反馈产品状况的情况下，对其分析整理； <strong>A</strong> 与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标；与BI部门协作,在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系； <strong>R</strong> 相关人员通过该数据体系能对各项重要功能的情况一目了然</p></li>
+<li><p><strong>S</strong> 进行现有产品优化； <strong>T</strong> 发掘现有使用问题，进行合理改进； <strong>A</strong>  熟练运用SQL提取和处理了大量复杂数据，找出不合理的转化环节；与各种具有同类功能的产品比较借鉴；用Visio优化流程图,进行产品改进；开发过程中与设计、开发等人员紧密配合，设计并进行A/B测试；关注上线前后数据表现和用户反馈，及时与各部门沟通解决产品功能和数据统计上的问题；对每项改动撰写规范清晰的记录文档，为后面的优化提供借鉴； <strong>R</strong> 更实际地满足用户需求，从细节上改善了用户体验</p></li>
+</ul>
 
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
