Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,9 +61,25 @@
 <p><strong><em>WAP产品线：功能改进、数据监控</em></strong></p>
 
 <ul>
-<li><p><strong>S</strong> 在WAP线数据庞杂不能有效反馈产品状况的情况下，对其分析整理； <strong>A</strong> 与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标；与BI部门协作,在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系； <strong>R</strong> 使相关人员通过该数据体系能及时准确了解功能使用状况</p></li>
-<li><p><strong>S</strong> 进行现有产品优化； <strong>T</strong> 发掘现有使用问题，进行合理改进； <strong>A</strong>  熟练运用SQL提取和处理了大量复杂数据，找出不合理的转化环节；与各种具有同类功能的产品比较借鉴；用Visio优化流程图,进行产品改进；跟进开发过程，设计并进行A/B测试；关注上线前后数据表现和用户反馈，及时与各部门沟通解决产品功能和数据统计上的问题；对每项改动撰写规范清晰的记录文档； <strong>R</strong> 更实际地满足用户需求，从细节上改善了用户体验</p></li>
+<li><p><strong>S</strong> 在WAP线数据庞杂不能有效反馈产品状况的情况下，对其分析整理； <strong>A</strong> 与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标；与BI部门协作，在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系； <strong>R</strong> 使相关人员通过该数据体系能及时准确了解功能使用状况</p></li>
+<li><p><strong>S</strong> 进行现有产品优化； <strong>T</strong> 发掘现有使用问题； <strong>A</strong>  熟练运用SQL提取和处理了大量复杂数据，找出不合理的转化环节；与各种具有同类功能的产品比较借鉴；用Visio优化流程图；跟进开发过程，设计并进行A/B测试；关注上线前后数据表现和用户反馈，及时与各部门沟通解决相关问题；对每项改动撰写完善的记录文档； <strong>R</strong> 更实际地满足用户需求，从细节上改善了用户体验</p></li>
 <li><p><strong>S</strong> GA对当前用户的使用设备情况统计不准确，无法判断技术应用方案； <strong>A</strong> 了解技术改进需求，独立编程提取数据，用Spotfire统计分析了相关数据并将其做成可视化模板； <strong>R</strong> 让技术人员可以通过简单的点击切换维度，及时了解用户的使用设备情况，为前端技术改进提供依据 </p></li>
+</ul>
+
+<p><strong><em>Web产品线：运营分析</em></strong></p>
+
+<ul>
+<li><p><strong>S</strong> 为提高用户信息查找效率;<strong>T</strong> 研究 web端类目页面的筛选项存在问题；<strong>S</strong> 处理大量数据分析查找过程的各项转化率，提出改进方案；<strong>S</strong> 提高筛选功能的使用率和转化率 </p></li>
+<li><p><strong>S</strong> 参与全站信息标签化的项目；<strong>T</strong> 为网站信息标签化做数据监控；<strong>A</strong> 和相关人员讨论协作，建立和标签相关的数据体系，制定检验规则；<strong>R</strong> 实时反馈信息标签化过程中的错漏</p></li>
+</ul>
+
+<p><strong><em>全站用户研究</em></strong></p>
+
+<ul>
+<li>针对特定问题，通过挖掘数据或追踪用户行为等方法寻找极端用户（如发帖成功率极低者）进行电话调研</li>
+<li>听取客服人员对用户反馈的月度总结，并结合用户后台留言，主动联系用户，详细了解其使用情况及需求</li>
+<li>提出测试需求，参加每月用户可用性测试，观察、记录用户使用过程，总结使用问题并与相关人员讨论解决方案</li>
+<li>实地走访二手车、租房和求职等各类用户300多个，了解其生活状况和使用场景：根据实际改进APP线下推广方式</li>
 </ul>
 
 <h3>
