--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Resume : ">
+    <title>Resume by yhwei</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Resume</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Resume</h1>
+        <p class="header"></p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/yhwei/Resume">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/yhwei/Resume/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/yhwei/Resume/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/yhwei/Resume">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Resume</h1>
-          <h2 id="project_tagline"></h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/yhwei">yhwei</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/yhwei/Resume/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/yhwei/Resume/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h1>
 <a id="yihuan-wei" class="anchor" href="#yihuan-wei" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yihuan Wei</h1>
 
@@ -76,10 +75,9 @@
 <p><strong><em>全站用户研究</em></strong></p>
 
 <ul>
-<li>针对特定问题，通过挖掘数据或追踪用户行为等方法寻找极端用户（如发帖成功率极低者）进行电话调研</li>
-<li>听取客服人员对用户反馈的月度总结，并结合用户后台留言，主动联系用户，详细了解其使用情况及需求</li>
-<li>提出测试需求，参加每月用户可用性测试，观察、记录用户使用过程，总结使用问题并与相关人员讨论解决方案</li>
-<li>实地走访二手车、租房和求职等各类用户300多个，了解其生活状况和使用场景：根据实际改进APP线下推广方式</li>
+<li>听取客服人员对用户反馈的月度总结，查看用户后台留言，主动联系极端用户，详细了解其需求</li>
+<li>提出测试需求，参加可用性测试，观察记录用户使用过程，总结使用问题并与相关人员讨论解决方案</li>
+<li>实地走访二手车、租房和求职等各类用户300多个，了解其生活场景：根据实际改进APP线下推广方式</li>
 </ul>
 
 <h3>
@@ -97,17 +95,12 @@
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Resume maintained by <a href="https://github.com/yhwei">yhwei</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-              <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -117,7 +110,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
