--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Resume by yhwei</title>
+    <meta name="description" content="Resume : ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Resume</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Resume</h1>
-        <p class="header"></p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/yhwei/Resume/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/yhwei/Resume/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/yhwei/Resume">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/yhwei/Resume">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/yhwei">yhwei</a></p>
+          <h1 id="project_title">Resume</h1>
+          <h2 id="project_tagline"></h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/yhwei/Resume/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/yhwei/Resume/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="yihuan-wei" class="anchor" href="#yihuan-wei" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yihuan Wei</h1>
 
@@ -46,16 +47,20 @@
 <p>2013/06　　复旦大学　　物理学学士</p>
 
 <ul>
-<li>复旦大学优秀学生 (3次，2009-2010）<br>
-</li>
-<li>复旦大学优秀毕业生奖学金 (2013)<br>
+<li>复旦大学优秀学生 (3次，2009-2010）　　* 复旦大学优秀毕业生奖学金 (2013)<br>
 </li>
 </ul>
 
 <h5>
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h5>
 
-<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong></p>
+<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（） 上海</strong></p>
+
+<p><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong></p>
+
+<p>
+<a href="#C4">查看 Chapter 4。</a>
+</p>
 
 <p><strong><em>WAP产品线：功能改进、数据监控</em></strong></p>
 
@@ -80,6 +85,37 @@
 <li>实地走访二手车、租房和求职等各类用户300多个，了解其生活场景：根据实际改进APP线下推广方式</li>
 </ul>
 
+<h2>
+<a id="chapter-4" class="anchor" href="#chapter-4" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="C4">Chapter 4</a>
+</h2>
+
+<p>This chapter explains ba bla bla</p>
+
+<p>2013/07 - 2013/11   果壳问答运营实习生 果壳网（www.guokr.com） 北京</p>
+
+<p>用户维护
+ 深挖优质用户，与其深入交流，及时提醒他们参与到感兴趣内容中，给网站创造了更多优质内容
+ 改进现有的用户成就设置，增加用户的荣誉感和对网站的归属感
+ 发掘更多新奇用户，使用户群体变得多样化，并建立起分类科学数据详实的用户系统
+ 维护网站秩序，审核处理不规范内容并提示用户修改，规范用户行为
+数据分析
+ 自主运用Matlab、MS Excel等工具统计及分析日常运营数据，根据多项数据的差异比较，针对不同情况进行运营方式改进：使问答数量提升6%
+ 与技术部门协作完成问答活动的数据统计，给出活动结果的奖项排名
+内容创造
+ 快速熟悉网站原创内容，选取优质内容制作了15期“每周get新技能”专题页面，增加精彩问答的回访率（常规专题页之一：<a href="http://www.guokr.com/zone/newskill004/%EF%BC%89">http://www.guokr.com/zone/newskill004/）</a>
+ 制作“向万有青年提问”等活动专题页面并在首页推广，提高了浏览数和问答数量 （活动页面之一：<a href="http://www.guokr.com/zone/askrobert/%EF%BC%89">http://www.guokr.com/zone/askrobert/）</a>
+ 以邀请用户、追踪热点等不同方式每周为首页产生约10%的优质内容
+ 总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性
+项目经历 
+2013/07– 2013/08      学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站) 项目成员
+网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站
+学生工作 
+2009/09 - 2011/01   复旦大学团委世博志愿者工作站项目部部长助理
+2008/09 - 2009/06   复旦大学团委实践部部长助理
+语言及技能
+英语     CET-6， 雅思7分  粤语 （母语）<br>
+计算机   数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire  产品设计： Axure,Visio,Photoshop,HTML</p>
+
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
@@ -95,12 +131,17 @@
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Resume maintained by <a href="https://github.com/yhwei">yhwei</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		          <script type="text/javascript">
+
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -110,6 +151,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
