--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 <h5>
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h5>
 
-<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（） 上海</strong></p>
+<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（） 上海</strong></p>　<p>
+<a href="#C4">查看 Chapter 4。</a>
+</p>
 
 <p><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong></p>
 
-<p>
-<a href="#C4">查看 Chapter 4。</a>
-</p>
+
 
 <p><strong><em>WAP产品线：功能改进、数据监控</em></strong></p>
 
