--- a/index.html
+++ b/index.html
@@ -54,15 +54,17 @@
 <h5>
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h5>
 
-<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（） 上海</strong></p>　<p>
-<a href="#C4">查看 Chapter 4。</a>
-</p>
+<h6>
+<a id="201401--201408产品助理百姓网wwwbaixingcom-上海" class="anchor" href="#201401--201408%E4%BA%A7%E5%93%81%E5%8A%A9%E7%90%86%E7%99%BE%E5%A7%93%E7%BD%91wwwbaixingcom-%E4%B8%8A%E6%B5%B7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong>
+</h6>
 
-<p><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong></p>
+<h6>
+<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
+</h6>
 
-
-
-<p><strong><em>WAP产品线：功能改进、数据监控</em></strong></p>
+<h6>
+<a id="wap产品线功能改进数据监控" class="anchor" href="#wap%E4%BA%A7%E5%93%81%E7%BA%BF%E5%8A%9F%E8%83%BD%E6%94%B9%E8%BF%9B%E6%95%B0%E6%8D%AE%E7%9B%91%E6%8E%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a>#<strong><em>WAP产品线：功能改进、数据监控</em></strong>
+</h6>
 
 <ul>
 <li><p><strong>S</strong> 在WAP线数据庞杂不能有效反馈产品状况的情况下，对其分析整理； <strong>A</strong> 与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标；与BI部门协作，在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系； <strong>R</strong> 使相关人员通过该数据体系能及时准确了解功能使用状况</p></li>
@@ -85,51 +87,59 @@
 <li>实地走访二手车、租房和求职等各类用户300多个，了解其生活场景：根据实际改进APP线下推广方式</li>
 </ul>
 
-<h2>
-<a id="chapter-4" class="anchor" href="#chapter-4" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="C4">Chapter 4</a>
-</h2>
+<h6>
+<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京-1" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC-1" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
+</h6>
 
-<p>This chapter explains ba bla bla</p>
+<h6>
+<a id="用户维护" class="anchor" href="#%E7%94%A8%E6%88%B7%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a>#<strong><em>用户维护</em></strong>
+</h6>
 
-<p>2013/07 - 2013/11   果壳问答运营实习生 果壳网（www.guokr.com） 北京</p>
+<ul>
+<li>深挖优质用户，与其深入交流，及时提醒他们参与到感兴趣内容中，给网站创造了更多优质内容</li>
+<li>改进现有的用户成就设置，增加用户的荣誉感和对网站的归属感</li>
+<li>发掘更多新奇用户，使用户群体变得多样化，并建立起分类科学数据详实的用户系统</li>
+<li>维护网站秩序，审核处理不规范内容并提示用户修改，规范用户行为</li>
+</ul>
 
-<p>用户维护
- 深挖优质用户，与其深入交流，及时提醒他们参与到感兴趣内容中，给网站创造了更多优质内容
- 改进现有的用户成就设置，增加用户的荣誉感和对网站的归属感
- 发掘更多新奇用户，使用户群体变得多样化，并建立起分类科学数据详实的用户系统
- 维护网站秩序，审核处理不规范内容并提示用户修改，规范用户行为
-数据分析
- 自主运用Matlab、MS Excel等工具统计及分析日常运营数据，根据多项数据的差异比较，针对不同情况进行运营方式改进：使问答数量提升6%
- 与技术部门协作完成问答活动的数据统计，给出活动结果的奖项排名
-内容创造
- 快速熟悉网站原创内容，选取优质内容制作了15期“每周get新技能”专题页面，增加精彩问答的回访率（常规专题页之一：<a href="http://www.guokr.com/zone/newskill004/%EF%BC%89">http://www.guokr.com/zone/newskill004/）</a>
- 制作“向万有青年提问”等活动专题页面并在首页推广，提高了浏览数和问答数量 （活动页面之一：<a href="http://www.guokr.com/zone/askrobert/%EF%BC%89">http://www.guokr.com/zone/askrobert/）</a>
- 以邀请用户、追踪热点等不同方式每周为首页产生约10%的优质内容
- 总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性
-项目经历 
-2013/07– 2013/08      学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站) 项目成员
-网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站
-学生工作 
-2009/09 - 2011/01   复旦大学团委世博志愿者工作站项目部部长助理
-2008/09 - 2009/06   复旦大学团委实践部部长助理
-语言及技能
-英语     CET-6， 雅思7分  粤语 （母语）<br>
-计算机   数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire  产品设计： Axure,Visio,Photoshop,HTML</p>
+<h6>
+<a id="数据分析" class="anchor" href="#%E6%95%B0%E6%8D%AE%E5%88%86%E6%9E%90" aria-hidden="true"><span class="octicon octicon-link"></span></a>#<strong><em>数据分析</em></strong>
+</h6>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<ul>
+<li>自主运用Matlab、MS Excel等工具统计及分析日常运营数据，根据多项数据的差异比较，针对不同情况进行运营方式改进：使问答数量提升6%</li>
+<li>与技术部门协作完成问答活动的数据统计，给出活动结果的奖项排名</li>
+</ul>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h6>
+<a id="内容创造" class="anchor" href="#%E5%86%85%E5%AE%B9%E5%88%9B%E9%80%A0" aria-hidden="true"><span class="octicon octicon-link"></span></a>#<strong><em>内容创造</em></strong>
+</h6>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<ul>
+<li>快速熟悉网站原创内容，选取优质内容制作了15期“每周get新技能”专题页面，增加精彩问答的回访率（常规专题页之一：<a href="http://www.guokr.com/zone/newskill004/%EF%BC%89">http://www.guokr.com/zone/newskill004/）</a>
+</li>
+<li>制作“向万有青年提问”等活动专题页面并在首页推广，提高了浏览数和问答数量 （活动页面之一：<a href="http://www.guokr.com/zone/askrobert/%EF%BC%89">http://www.guokr.com/zone/askrobert/）</a>
+</li>
+<li>以邀请用户、追踪热点等不同方式每周为首页产生约10%的优质内容</li>
+<li>总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性</li>
+</ul>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h5>
+<a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h5>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h6>
+<a id="201307-201308学术宅-自发建立的一个方便学术研究生进行讨论的兴趣网站项目成员" class="anchor" href="#201307-201308%E5%AD%A6%E6%9C%AF%E5%AE%85-%E8%87%AA%E5%8F%91%E5%BB%BA%E7%AB%8B%E7%9A%84%E4%B8%80%E4%B8%AA%E6%96%B9%E4%BE%BF%E5%AD%A6%E6%9C%AF%E7%A0%94%E7%A9%B6%E7%94%9F%E8%BF%9B%E8%A1%8C%E8%AE%A8%E8%AE%BA%E7%9A%84%E5%85%B4%E8%B6%A3%E7%BD%91%E7%AB%99%E9%A1%B9%E7%9B%AE%E6%88%90%E5%91%98" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
+</h6>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站
+2010/05　　2010年上海世博会优秀志愿者
+2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</p>
+
+<h4>
+<a id="语言及技能" class="anchor" href="#%E8%AF%AD%E8%A8%80%E5%8F%8A%E6%8A%80%E8%83%BD" aria-hidden="true"><span class="octicon octicon-link"></span></a>语言及技能</h4>
+
+<p>英语　　CET-6， 雅思7分　　粤语（母语）<br>
+计算机　　数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire　　产品设计： Axure,Visio,Photoshop,HTML</p>
       </section>
     </div>
 
