--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Resume : ">
+    <title>Resume by yhwei</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Resume</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Resume</h1>
+        <p class="header"></p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/yhwei/Resume">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/yhwei/Resume/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/yhwei/Resume/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/yhwei/Resume">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Resume</h1>
-          <h2 id="project_tagline"></h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/yhwei">yhwei</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/yhwei/Resume/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/yhwei/Resume/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h1>
 <a id="yihuan-wei" class="anchor" href="#yihuan-wei" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yihuan Wei</h1>
 
@@ -59,10 +58,6 @@
 </h6>
 
 <h6>
-<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
-</h6>
-
-<h6>
 <a id="wap产品线功能改进数据监控" class="anchor" href="#wap%E4%BA%A7%E5%93%81%E7%BA%BF%E5%8A%9F%E8%83%BD%E6%94%B9%E8%BF%9B%E6%95%B0%E6%8D%AE%E7%9B%91%E6%8E%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a>#<strong><em>WAP产品线：功能改进、数据监控</em></strong>
 </h6>
 
@@ -87,12 +82,14 @@
 <li>实地走访二手车、租房和求职等各类用户300多个，了解其生活场景：根据实际改进APP线下推广方式</li>
 </ul>
 
+<hr>
+
 <h6>
-<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京-1" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC-1" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
+<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
 </h6>
 
 <h6>
-<a id="用户维护" class="anchor" href="#%E7%94%A8%E6%88%B7%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a>#<strong><em>用户维护</em></strong>
+<a id="用户维护" class="anchor" href="#%E7%94%A8%E6%88%B7%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>用户维护</em></strong>
 </h6>
 
 <ul>
@@ -103,7 +100,7 @@
 </ul>
 
 <h6>
-<a id="数据分析" class="anchor" href="#%E6%95%B0%E6%8D%AE%E5%88%86%E6%9E%90" aria-hidden="true"><span class="octicon octicon-link"></span></a>#<strong><em>数据分析</em></strong>
+<a id="数据分析" class="anchor" href="#%E6%95%B0%E6%8D%AE%E5%88%86%E6%9E%90" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>数据分析</em></strong>
 </h6>
 
 <ul>
@@ -112,7 +109,7 @@
 </ul>
 
 <h6>
-<a id="内容创造" class="anchor" href="#%E5%86%85%E5%AE%B9%E5%88%9B%E9%80%A0" aria-hidden="true"><span class="octicon octicon-link"></span></a>#<strong><em>内容创造</em></strong>
+<a id="内容创造" class="anchor" href="#%E5%86%85%E5%AE%B9%E5%88%9B%E9%80%A0" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>内容创造</em></strong>
 </h6>
 
 <ul>
@@ -131,27 +128,29 @@
 <a id="201307-201308学术宅-自发建立的一个方便学术研究生进行讨论的兴趣网站项目成员" class="anchor" href="#201307-201308%E5%AD%A6%E6%9C%AF%E5%AE%85-%E8%87%AA%E5%8F%91%E5%BB%BA%E7%AB%8B%E7%9A%84%E4%B8%80%E4%B8%AA%E6%96%B9%E4%BE%BF%E5%AD%A6%E6%9C%AF%E7%A0%94%E7%A9%B6%E7%94%9F%E8%BF%9B%E8%A1%8C%E8%AE%A8%E8%AE%BA%E7%9A%84%E5%85%B4%E8%B6%A3%E7%BD%91%E7%AB%99%E9%A1%B9%E7%9B%AE%E6%88%90%E5%91%98" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
 </h6>
 
-<p>网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站
-2010/05　　2010年上海世博会优秀志愿者
-2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</p>
+<p>网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站</p>
 
-<h4>
-<a id="语言及技能" class="anchor" href="#%E8%AF%AD%E8%A8%80%E5%8F%8A%E6%8A%80%E8%83%BD" aria-hidden="true"><span class="octicon octicon-link"></span></a>语言及技能</h4>
+<h6>
+<a id="2010052010年上海世博会优秀志愿者" class="anchor" href="#2010052010%E5%B9%B4%E4%B8%8A%E6%B5%B7%E4%B8%96%E5%8D%9A%E4%BC%9A%E4%BC%98%E7%A7%80%E5%BF%97%E6%84%BF%E8%80%85" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2010/05　　2010年上海世博会优秀志愿者</strong>
+</h6>
+
+<h6>
+<a id="200909---201101复旦大学团委世博志愿者工作站项目部部长助理" class="anchor" href="#200909---201101%E5%A4%8D%E6%97%A6%E5%A4%A7%E5%AD%A6%E5%9B%A2%E5%A7%94%E4%B8%96%E5%8D%9A%E5%BF%97%E6%84%BF%E8%80%85%E5%B7%A5%E4%BD%9C%E7%AB%99%E9%A1%B9%E7%9B%AE%E9%83%A8%E9%83%A8%E9%95%BF%E5%8A%A9%E7%90%86" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
+</h6>
+
+<h5>
+<a id="语言及技能" class="anchor" href="#%E8%AF%AD%E8%A8%80%E5%8F%8A%E6%8A%80%E8%83%BD" aria-hidden="true"><span class="octicon octicon-link"></span></a>语言及技能</h5>
 
 <p>英语　　CET-6， 雅思7分　　粤语（母语）<br>
-计算机　　数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire　　产品设计： Axure,Visio,Photoshop,HTML</p>
+计算机　　数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire
+产品设计： Axure,Visio,Photoshop,HTML</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Resume maintained by <a href="https://github.com/yhwei">yhwei</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-              <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -161,7 +160,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
