--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Resume by yhwei</title>
+    <meta name="description" content="Resume : ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Resume</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Resume</h1>
-        <p class="header"></p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/yhwei/Resume/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/yhwei/Resume/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/yhwei/Resume">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/yhwei/Resume">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/yhwei">yhwei</a></p>
+          <h1 id="project_title">Resume</h1>
+          <h2 id="project_tagline"></h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/yhwei/Resume/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/yhwei/Resume/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="yihuan-wei" class="anchor" href="#yihuan-wei" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yihuan Wei</h1>
 
@@ -145,12 +146,17 @@
 计算机　　数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire
 产品设计： Axure,Visio,Photoshop,HTML</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Resume maintained by <a href="https://github.com/yhwei">yhwei</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		          <script type="text/javascript">
+
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -160,6 +166,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
