--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Resume : ">
+    <title>Resume by yhwei</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>Resume</title>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/yhwei/Resume">View on GitHub</a>
-
-          <h1 id="project_title">Resume</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/yhwei/Resume/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/yhwei/Resume/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <header class="without-description">
+        <h1>Resume</h1>
+        <p></p>
+        <p class="view"><a href="https://github.com/yhwei/Resume">View the Project on GitHub <small>yhwei/Resume</small></a></p>
+        <ul>
+          <li><a href="https://github.com/yhwei/Resume/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/yhwei/Resume/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/yhwei/Resume">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a id="yihuan-wei" class="anchor" href="#yihuan-wei" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yihuan Wei</h1>
 
@@ -47,7 +43,7 @@
 <p>2013/06　　复旦大学　　物理学学士</p>
 
 <ul>
-<li>复旦大学优秀学生 (3次，2009-2010）　　* 复旦大学优秀毕业生奖学金 (2013)<br>
+<li>复旦大学优秀学生 (3次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)<br>
 </li>
 </ul>
 
@@ -139,23 +135,23 @@
 <a id="200909---201101复旦大学团委世博志愿者工作站项目部部长助理" class="anchor" href="#200909---201101%E5%A4%8D%E6%97%A6%E5%A4%A7%E5%AD%A6%E5%9B%A2%E5%A7%94%E4%B8%96%E5%8D%9A%E5%BF%97%E6%84%BF%E8%80%85%E5%B7%A5%E4%BD%9C%E7%AB%99%E9%A1%B9%E7%9B%AE%E9%83%A8%E9%83%A8%E9%95%BF%E5%8A%A9%E7%90%86" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
 </h6>
 
+<hr>
+
 <h5>
 <a id="语言及技能" class="anchor" href="#%E8%AF%AD%E8%A8%80%E5%8F%8A%E6%8A%80%E8%83%BD" aria-hidden="true"><span class="octicon octicon-link"></span></a>语言及技能</h5>
 
-<p>英语　　CET-6， 雅思7分　　粤语（母语）<br>
-计算机　　数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire
-产品设计： Axure,Visio,Photoshop,HTML</p>
+<p>英语：CET-6， 雅思7分　　粤语（母语）</p>
+
+<p>数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire</p>
+
+<p>产品设计： Axure, Visio, Photoshop, HTML</p>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Resume maintained by <a href="https://github.com/yhwei">yhwei</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/yhwei">yhwei</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -166,7 +162,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
