Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h3>
 
 <h4>
-<a id="201401--201408产品助理百姓网wwwbaixingcom-上海" class="anchor" href="#201401--201408%E4%BA%A7%E5%93%81%E5%8A%A9%E7%90%86%E7%99%BE%E5%A7%93%E7%BD%91wwwbaixingcom-%E4%B8%8A%E6%B5%B7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong>
+<a id="201401--201408产品助理百姓网wwwbaixingcom-上海" class="anchor" href="#201401--201408%E4%BA%A7%E5%93%81%E5%8A%A9%E7%90%86%E7%99%BE%E5%A7%93%E7%BD%91wwwbaixingcom-%E4%B8%8A%E6%B5%B7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2014/01 – 2014/08　　产品助理　　百姓网（<a href="www.baixing.com">www.baixing.com</a>） 上海</strong>
 </h4>
 
 <h4>
@@ -81,7 +81,7 @@
 <hr>
 
 <h4>
-<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
+<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（<a href="www.guokr.com">www.guokr.com</a>）　　北京</strong>
 </h4>
 
 <h4>
@@ -109,10 +109,8 @@
 </h4>
 
 <ul>
-<li>快速熟悉网站原创内容，选取优质内容制作了15期“每周get新技能”专题页面，增加精彩问答的回访率（常规专题页之一：<a href="http://www.guokr.com/zone/newskill004/%EF%BC%89">http://www.guokr.com/zone/newskill004/）</a>
-</li>
-<li>制作“向万有青年提问”等活动专题页面并在首页推广，提高了浏览数和问答数量 （活动页面之一：<a href="http://www.guokr.com/zone/askrobert/%EF%BC%89">http://www.guokr.com/zone/askrobert/）</a>
-</li>
+<li>快速熟悉网站原创内容，选取优质内容制作了15期“每周get新技能”专题页面，增加精彩问答的回访率（常规专题页之一 <a href="http://www.guokr.com/zone/newskill004/">点此查看</a>）</li>
+<li>制作“向万有青年提问”等活动专题页面并在首页推广，提高了浏览数和问答数量 （活动页面之一 <a href="http://www.guokr.com/zone/askrobert/">点此查看</a>）</li>
 <li>以邀请用户、追踪热点等不同方式每周为首页产生约10%的优质内容</li>
 <li>总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性</li>
 </ul>
