Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <ul>
 <li><p><strong>S</strong> 在WAP线数据庞杂不能有效反馈产品状况的情况下，对其分析整理； <strong>A</strong> 与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标；与BI部门协作，在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系； <strong>R</strong> 使相关人员通过该数据体系能及时准确了解功能使用状况</p></li>
 <li><p><strong>S</strong> 进行现有产品优化； <strong>T</strong> 发掘现有使用问题； <strong>A</strong>  熟练运用SQL提取和处理了大量复杂数据，找出不合理的转化环节；与各种具有同类功能的产品比较借鉴；用Visio优化流程图；跟进开发过程，设计并进行A/B测试；关注上线前后数据表现和用户反馈，及时与各部门沟通解决相关问题；对每项改动撰写完善的记录文档； <strong>R</strong> 更实际地满足用户需求，从细节上改善了用户体验</p></li>
-<li><p><strong>S</strong> GA对当前用户的使用设备情况统计不准确，无法判断技术应用方案； <strong>A</strong> 了解技术改进需求，独立编程提取数据，用Spotfire统计分析了相关数据并将其做成可视化模板； <strong>R</strong> 让技术人员可以通过简单的点击切换维度，及时了解用户的使用设备情况，为前端技术改进提供依据 </p></li>
+<li><p><strong>S</strong> GA对当前用户的使用设备情况统计不准确，无法判断技术应用方案； <strong>A</strong> 了解技术改进需求，独立编程提取数据，用Spotfire统计分析了相关数据并将其做成可视化模板； <strong>R</strong> 让技术人员可以通过该模板简单点击切换维度，及时了解用户的使用设备情况，为前端技术改进提供依据 </p></li>
 </ul>
 
 <p><strong><em>Web产品线：运营分析</em></strong></p>
@@ -127,12 +127,15 @@
 <p>网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站</p>
 
 <h4>
-<a id="2010052010年上海世博会优秀志愿者" class="anchor" href="#2010052010%E5%B9%B4%E4%B8%8A%E6%B5%B7%E4%B8%96%E5%8D%9A%E4%BC%9A%E4%BC%98%E7%A7%80%E5%BF%97%E6%84%BF%E8%80%85" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2010/05　　2010年上海世博会优秀志愿者</strong>
+<a id="2010052010年上海世博会优秀志愿者" class="anchor" href="#2010052010%E5%B9%B4%E4%B8%8A%E6%B5%B7%E4%B8%96%E5%8D%9A%E4%BC%9A%E4%BC%98%E7%A7%80%E5%BF%97%E6%84%BF%E8%80%85" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong>
 </h4>
 
 <h4>
 <a id="200909---201101复旦大学团委世博志愿者工作站项目部部长助理" class="anchor" href="#200909---201101%E5%A4%8D%E6%97%A6%E5%A4%A7%E5%AD%A6%E5%9B%A2%E5%A7%94%E4%B8%96%E5%8D%9A%E5%BF%97%E6%84%BF%E8%80%85%E5%B7%A5%E4%BD%9C%E7%AB%99%E9%A1%B9%E7%9B%AE%E9%83%A8%E9%83%A8%E9%95%BF%E5%8A%A9%E7%90%86" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
 </h4>
+
+<h4>
+<a id="豆瓣小组bbs等社区活跃者组织过多次线下聚会" class="anchor" href="#%E8%B1%86%E7%93%A3%E5%B0%8F%E7%BB%84bbs%E7%AD%89%E7%A4%BE%E5%8C%BA%E6%B4%BB%E8%B7%83%E8%80%85%E7%BB%84%E7%BB%87%E8%BF%87%E5%A4%9A%E6%AC%A1%E7%BA%BF%E4%B8%8B%E8%81%9A%E4%BC%9A" aria-hidden="true"><span class="octicon octicon-link"></span></a>豆瓣小组，BBS等社区活跃者，组织过多次线下聚会</h4>
 
 <hr>
 
