--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 <h3>
 <a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h3>
 
-<p><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
-网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站
-<strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong>
-<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
+<p><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong><br>
+网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站<br>
+<strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong><br>
+<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong><br>
 豆瓣小组，BBS等社区活跃者，组织过多次线下聚会</p>
 
 <hr>
