--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <p><strong><em>Web产品线：运营分析</em></strong></p>
 
 <ul>
-<li><p><strong>S</strong> 参与全站信息标签化的项目；<strong>T</strong> 为网站信息标签化做数据监控；<strong>A</strong> 和相关人员讨论协作，建立和标签相关的数据体系，制定检验规则；<strong>R</strong> 实时反馈信息标签化过程中的错漏</p></li>
+<li><p><strong>S</strong> 参与全站信息标签化的项目；<strong>T</strong> 为网站信息标签化做数据监控；<strong>A</strong> 和相关人员讨论协作，建立和标签相关的数据体系，制定检验规则并自主建报表将其实现；<strong>R</strong> 实时反馈信息标签化过程中的错漏</p></li>
 <li><p>为提高用户信息查找效率；研究 web端类目页面的筛选项存在问题；自主提取多项数据，定义并分析信息查找过程的各项转化率，提出改进方案</p></li>
 </ul>
 
