--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 <p>数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire</p>
 
-<p>产品设计： Axure, Visio, Photoshop, HTML</p>
+<p>产品设计： Axure, Visio, Photoshop, HTML</p><br>
         </section>
 
         <aside id="sidebar">
@@ -162,7 +162,7 @@
             } catch(err) {}
           </script>
           
-<div id="surveyMonkeyInfo" style="width:730px;font-size:10px;color:#666;"><div><iframe id="sm_e_s" src="https://www.surveymonkey.com/jsEmbed.aspx?sm=100q3dscpqHBIL2_2b8kYmqQ_3d_3d" width="730" height="300" style="border:0px;padding-left:500px;padding-bottom:4px;" frameborder="0" allowtransparency="true" ></iframe>
+<div id="surveyMonkeyInfo" style="width:730px;font-size:10px;color:#666;"><div><iframe id="sm_e_s" src="https://www.surveymonkey.com/jsEmbed.aspx?sm=100q3dscpqHBIL2_2b8kYmqQ_3d_3d" width="730" height="300" style="border:0px;padding-left:200px;padding-bottom:4px;" frameborder="0" allowtransparency="true" ></iframe>
 </div>
   </body>
 </html>
