--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <ul>
 <li><p>在WAP线数据庞杂不能有效反馈产品状况的情况下，对其分析整理；与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标；与BI部门协作，在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系；使相关人员通过该数据体系能及时准确了解功能使用状况</p></li>
-<li><p>进行现有产品优化；发掘现有使用问题；熟练运用SQL提取和处理了大量复杂数据，找出不合理的转化环节；与各种具有同类功能的产品比较借鉴；用Visio优化流程图；跟进开发过程，设计并进行A/B测试；关注上线前后数据表现和用户反馈，及时与各部门沟通解决相关问题；对每项改动撰写完善的记录文档；更实际地满足用户需求，从细节上改善了用户体验</p></li>
+<li><p>进行现有产品优化；发掘现有使用问题；熟练运用SQL提取和处理了大量复杂数据，找出不合理的转化环节；与各种具有同类功能的产品比较借鉴；用Visio优化流程图；跟进开发过程，进行A/B测试；关注上线前后数据表现和用户反馈，及时与各部门沟通解决相关问题；对每项改动撰写完善的记录文档；更实际地满足用户需求，从细节上改善了用户体验</p></li>
 <li><p>GA对当前用户的使用设备情况统计不准确，无法判断技术应用方案；了解技术改进需求，独立编程提取数据，用Spotfire统计分析了相关数据并将其做成可视化模板；让技术人员可以通过该模板简单点击切换维度，及时了解用户的使用设备情况，为前端技术改进提供依据 </p></li>
 </ul>
 
@@ -87,7 +87,7 @@
 <ul>
 <li>深挖优质用户，与其深入交流，及时提醒他们参与到感兴趣内容中，给网站创造了更多优质内容</li>
 <li>改进现有的用户成就设置，增加用户的荣誉感和对网站的归属感</li>
-<li>发掘更多新奇用户，使用户群体变得多样化，并建立起分类科学数据详实的用户系统</li>
+<li>发掘更多新奇用户，使用户群体变得多样化，并建立起分类科学数据详实的用户系统，更便于维系用户，该系统沿用至今</li>
 <li>维护网站秩序，审核处理不规范内容并提示用户修改，规范用户行为</li>
 </ul>
 
