--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 </h4>
 
 <ul>
-<li>快速熟悉网站原创内容，选取优质内容制作了15期“每周get新技能”专题页面，增加精彩问答的回访率（常规专题页之一 <a href="http://www.guokr.com/zone/newskill004/">点此查看</a>）</li>
-<li>制作“向万有青年提问”等活动专题页面并在首页推广，提高了浏览数和问答数量 （活动页面之一 <a href="http://www.guokr.com/zone/askrobert/">点此查看</a>）</li>
+<li>快速熟悉网站原创内容，选取优质内容制作了15期“每周get新技能”专题页面，增加精彩问答的回访率（常规专题页之一 <a href="http://www.guokr.com/zone/newskill004/" target="view_window">点此查看</a>）</li>
+<li>制作“向万有青年提问”等活动专题页面并在首页推广，提高了浏览数和问答数量 （活动页面之一 <a href="http://www.guokr.com/zone/askrobert/" target="view_window">点此查看</a>）</li>
 <li>以邀请用户、追踪热点等不同方式每周为首页产生约10%的优质内容</li>
 <li>总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性</li>
 </ul>
