--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Yihuan Wei by yhwei</title>
+    <title>Resume</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Yihuan Wei</h1>
+
         <h2>Email: yhwei09@gmail.com</h2>
         <a href="https://github.com/yhwei/resumelaterversion" class="button"><small>View project on</small> GitHub</a>
       </div>
