Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Resume</title>
+    <title>Resume by yhwei</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        
+        <h1>Resume</h1>
         <h2>Email: yhwei09@gmail.com</h2>
         <a href="https://github.com/yhwei/resumelaterversion" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -204,7 +204,7 @@
 
 <p>数据处理：MS Office, R programming, Google Analytics, SQL, Matlab, Spotfire</p>
 
-<p>产品设计： Axure, Visio, Photoshop, HTML</p>
+<p>产品设计： Axure, Visio, Photoshop, HTML  </p>
         </section>
 
         <aside id="sidebar">
