--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Resume by yhwei</title>
+    <title>Resume</title>
   </head>
 
   <body>
@@ -41,7 +41,7 @@
 <p><strong>2013/06　　复旦大学　　物理学学士</strong></p>
 
 <ul>
-<li>复旦大学优秀学生 (3次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)</li>
+<li>复旦大学优秀学生 (2次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)</li>
 </ul>
 
 <hr>
