--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <p>为提升Android用户的留存率实现季度目标，定位具体问题，给出产品优化方向进行改进  </p>
 
 <ul>
-<li>修正数据统计的bug,合理地定义留存率，使OKR制定更科学；<br>
+<li>修正数据统计的bug，合理地定义留存率，使OKR制定更科学；<br>
 </li>
 <li>自主学习R语言，并用其处理了复杂的用户行为数据，从多个维度进行分析，确定了几个语言等方面的问题点；<br>
 </li>
