--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 </li>
 <li>针对这些步骤设计线框图和交互界面，进行优化；<br>
 </li>
-<li>使产品流程更符合易用性原则，同时也为后续的商店产品改进做基础建设<br>
-</li>
+使产品流程更符合易用性原则，同时也为后续的商店产品改进做基础建设<br>
+
 </ul>
 
 <h4>
