--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 <ul>
 <li>修正数据统计的bug，合理地定义留存率，使OKR制定更科学；<br>
 </li>
-<li>自主学习R语言，并用其处理了复杂的用户行为数据，从多个维度进行分析，确定了几个语言等方面的问题点；<br>
+<li>自主学习R语言处理了复杂的用户行为数据，多维度深入分析确定了几个语言等方面的问题点；<br>
 </li>
-<li>倡导了两场可用性测试的开展，与十几位使用存在问题语言的外国用户进行了焦点小组访谈和一对一交流，进一步验证数据中发现的问题点；<br>
+<li>倡导了两场可用性测试的开展，与十几位外国用户进行了焦点小组访谈和一对一交流，进一步验证数据中发现的问题点；<br>
 </li>
 <li>撰写可用性测试报告，指明改进方向，并将结论交付与开发人员；<br>
 </li>
@@ -77,11 +77,11 @@
 <p>在产品数据繁杂无章的情况下，降低查看数据的成本和提高数据记录的准确性  </p>
 
 <ul>
-<li>梳理产品框架，在App端增加重要而详细的用户行为数据记录，以便深入分析了解用户行为；<br>
+<li>梳理产品框架，在App端增加全面的行为数据记录；<br>
 </li>
-<li>发布新功能/版本前，与其他产品人员和开发人员进行细致沟通，添加与功能改进相关的数据点，以便能从后续数据表现中了解功能使用情况；<br>
+<li>发布新功能/版本前，与产品／开发人员充分沟通布数据点，以便能从后续数据表现中了解功能使用情况；<br>
 </li>
-<li>收集需求，根据不同的数据类型，设计数据后台的展示页面，以便相关人员能方便快捷地查看；<br>
+<li>收集需求，根据不同的数据类型，设计数据后台的展示页面，方便相关人员查看；<br>
 </li>
 <li>编写自动化程序，发送汇报工作进度的数据周报，促进团队内外的信息流通；<br>
 </li>
@@ -94,9 +94,7 @@
 </h4>
 
 <ul>
-<li>分析该流程相关数据发现其转化率较低的步骤；<br>
-</li>
-<li>针对这些步骤设计线框图和交互界面，进行优化；<br>
+<li>分析该流程相关数据发现其转化率较低的步骤；针对这些步骤重新设计线框图和交互界面，进行优化；<br>
 </li>
 </ul>
 
