--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <ul>
 <li>梳理产品框架，在App端增加全面的行为数据记录；<br>
 </li>
-<li>发布新功能/版本前，与产品／开发人员充分沟通布数据点，以便能从后续数据表现中了解功能使用情况；<br>
+<li>发布新功能/版本前，与设计/开发人员充分沟通布数据点，以便从后续数据表现中了解功能使用情况；<br>
 </li>
 <li>收集需求，根据不同的数据类型，设计数据后台的展示页面，方便相关人员查看；<br>
 </li>
@@ -94,7 +94,7 @@
 </h4>
 
 <ul>
-<li>分析该流程相关数据发现其转化率较低的步骤；针对这些步骤重新设计线框图和交互界面，进行优化；<br>
+<li>分析该流程相关数据确定其转化率较低的步骤；改进了该流程的线框图和交互设计；<br>
 </li>
 </ul>
 
