--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </h4>
 
 <ul>
-<li>每周回复多国用户的数百封反馈邮件，了解第一手用户使用情况，并对比竞品类似功能做改进思考</li>
+<li>每周回复多国用户的上百封反馈邮件，了解第一手用户使用情况，并对比竞品类似功能做改进思考</li>
 </ul>
 
 <hr>
