--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="inner">
         <h1>Resume</h1>
         <h2>Email: yhwei09@gmail.com</h2>
+        <h3>Phone: 壹叁柒陆肆陆零贰壹玖零</h3>
         <a href="https://github.com/yhwei/resumelaterversion" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
