--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
 <hr>
 
 <h3>
-<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h3>
+<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h3>
 
-<p><strong>2013/06　　复旦大学　　物理学学士</strong></p>
+<p><strong>2013/06　　Fudan University　　BSc. in Physics</strong></p>
+<p><strong>2018/10　　City University of Hong Kong　　MSc. in Computer Science</strong></p>
 
-<ul>
-<li>复旦大学优秀学生 (2次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)</li>
-</ul>
 
 <hr>
 
