--- a/index.html
+++ b/index.html
@@ -47,32 +47,32 @@
 <p><strong>20xx/01-　　lalalla</strong></p>
 hahahha
 <h4>
-<a id="多维度分析验证提升用户留存率" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>Data Solution</em></strong>
+<a id="多维度分析验证提升用户留存率" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Data Solution</strong>
 
 
 <ul>
 <li>Design Segment event tracking for website, mini-program
-<br>
+
 </li>
 <li>ETL pipeline: Complete the production test and data validation, build data model in Snowflake data warehouse
-<br>
+
 </li>
-<li>Create dashboard for multiple teams, help them track and achieve OKRs<br>
+<li>Create dashboard for multiple teams, help them track and achieve OKRs
 </li>
 </ul>
 
 
 
 <h4>
-<a id="完善数据记录设计数据可视化后台" class="anchor" href="#%E5%AE%8C%E5%96%84%E6%95%B0%E6%8D%AE%E8%AE%B0%E5%BD%95%E8%AE%BE%E8%AE%A1%E6%95%B0%E6%8D%AE%E5%8F%AF%E8%A7%86%E5%8C%96%E5%90%8E%E5%8F%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>Data Science and Analytics</em></strong>
+<a id="完善数据记录设计数据可视化后台" class="anchor" href="#%E5%AE%8C%E5%96%84%E6%95%B0%E6%8D%AE%E8%AE%B0%E5%BD%95%E8%AE%BE%E8%AE%A1%E6%95%B0%E6%8D%AE%E5%8F%AF%E8%A7%86%E5%8C%96%E5%90%8E%E5%8F%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Data Science and Analytics</strong>
 </h4>
 
 <p>A/B Testing  </p>
 
 <ul>
-<li>Set up A/B testing framework by Google Optimize, save technical service budget  <br>
+<li>Set up A/B testing framework by Google Optimize, save technical service budget 
 </li>
-<li>Design experiment for website design, improve user experience and potential customer’s conversion<br>
+<li>Design experiment for website design, improve user experience and potential customer’s conversion
 </li>
 </ul>
 
@@ -83,13 +83,13 @@ hahahha
   
 
 <ul>          
-</li>Collect data for sales mini-program to analyze user behaviour,  improve feature development</li>
-</li>Generate optimized sales leads, help sales team target precise customers, improve sales efficiency</li>         
+<li>Collect data for sales mini-program to analyze user behaviour,  improve feature development</li>
+<li>Generate optimized sales leads, help sales team target precise customers, improve sales efficiency</li>         
 </ul>         
           
  
 <h4>
-<a id="改进注册登录流程" class="anchor" href="#%E6%94%B9%E8%BF%9B%E6%B3%A8%E5%86%8C%E7%99%BB%E5%BD%95%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>改进注册登录流程</em></strong>
+<a id="改进注册登录流程" class="anchor" href="#%E6%94%B9%E8%BF%9B%E6%B3%A8%E5%86%8C%E7%99%BB%E5%BD%95%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Member and Post Recommendation</strong>
 </h4>
 
 <ul>
