--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 
 
-<h3>
-<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h3>
+<h2>
+<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
 
  <p><strong>BSc. in Physics, zzz University　　　　June 2013</strong></p>
 <p><strong>MSc. in Computer Science, yyy of kkk　　　　Oct. 2019</strong></p>
@@ -41,8 +41,9 @@
 
 <hr>
 
-<h3>
-<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Experience</h3>
+<h2>
+<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Experience
+ </h2>
 
 <p><strong>20xx/01-　　lalalla</strong></p>
 hahahha
@@ -101,10 +102,16 @@ hahahha
 <ul>          
 <li>Provide Looker (data visualization tool) training for multiple teams, empower teams to do self-analysis with more flexibility
 <li>Share statistic learnings and analysis findings, equip team to be more data driven </li>
-
- <p>Building localized business metric system and data model from 0 to 1 </p>
-  
+</ul>
         
+<p>Building localized business metric system and data model from 0 to 1 </p>
+  
+<h3>
+<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Experience</h3>
+
+<p><strong>20xx/01-　　lalalla</strong></p>
+hahahha 
+
 -------------------- 
 <h4>
 <a id="改进注册登录流程" class="anchor" href="#%E6%94%B9%E8%BF%9B%E6%B3%A8%E5%86%8C%E7%99%BB%E5%BD%95%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Member and Post Recommendation</strong>
