--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ Use Hive SQL and R with machine learning knowledge to process data, build models
 
 
 <h2>
-<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skill 
+<a id="工" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skill 
 </h2>
 
 <h4>
