--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
 <h2>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
-
- <p><strong>BSc. in Physics, zzz University　　　　June 2013</strong></p>
+<div align="justify">
+<p><strong>BSc. in Physics, zzz University　　　　June 2013</strong></p>
 <p><strong>MSc. in Computer Science, yyy of kkk　　　　Oct. 2019</strong></p>
-
+</div>
 
 <hr>
 
@@ -45,8 +45,7 @@
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Experience
  </h2>
 
-<h3>
-<p><strong>20xx/01-　　lalalla</strong></p>
+<h3> <strong>20xx/01-　lalalla</strong>　
 </h3>
 
           
@@ -164,27 +163,6 @@
 <li>Optimized website design by applying a series of funnel analysis and investigating hundreds of users offline, increasing conversion rates </li> 
 <li>Extracted and organized data using SQL and Spotfire (similar to Tableau) to create visualisation reports for tech team </li> 
 </ul> 
-
-
-
-<h2>
-<a id="工" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skill 
-</h2>
-
-<h4>
-Knowledge 
-</h4>
-<p>Machine Learning </p>
-<ul>Clustering, Logistic Regression, Decision Tree, Random Forest, SVM, etc. </ul>
-<p>Statistics, A/B Testing</p>
-
-<h4>Programming& System</h4>
-<ul>
-Hive SQL, Shell, Hadoop, Python, HTML, Linux </ul>
-<h4>Modelling & Analysis </h4>
-<ul>R, MATLAB, Google Analytics, Spotfire, Tableau </ul>
-<h4>Speaking Language </h4>
-<ul>Native speaker of Cantonese and Mandarin, proficiency in English </ul>
 </section>
 
 
