--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <h2>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
-<div align="justify">
+<div align="center">
 <p><strong>BSc. in Physics, zzz University　　　　June 2013</strong></p>
 <p><strong>MSc. in Computer Science, yyy of kkk　　　　Oct. 2019</strong></p>
 </div>
@@ -170,8 +170,8 @@
 
 <aside id="sidebar">
           
-<font size=3>Knowledge & Skill</font>
-
+<p><font size=3>Knowledge & Skill</font>
+</p>
 <p><strong>Machine Learning</strong></p>
 <ul>
 <li>Clustering, Logistic Regression, Decision Tree, Random Forest, SVM, etc. </li>
@@ -194,14 +194,7 @@
 
 
 
-          <a href="https://github.com/yhwei/resumelaterversion/zipball/master" class="button">
-            <small>Download</small>
-            .zip file
-          </a>
-          <a href="https://github.com/yhwei/resumelaterversion/tarball/master" class="button">
-            <small>Download</small>
-            .tar.gz file
-          </a>
+    
 
           <p class="repo-owner"><a href="https://github.com/yhwei/resumelaterversion"></a> is maintained by <a href="https://github.com/yhwei">yhwei</a>.</p>
 
