--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 <h2>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
 
-<p><strong>BSc. in Physics, zzz University　　　<div align="right">　June 2013</strong></p> </div>
-<p><strong>MSc. in Computer Science, yyy of kkk　　　　　<div align="right">　　Oct. 2019</strong></p> </div>
 
-
+<p style="text-align:justify; text-justify:inter-ideograph;">
+ <p><strong>BSc. in Physics, zzz University　June 2013</strong></p>
+ <p><strong>MSc. in Computer Science, yyy of kkk　　　　　　　Oct. 2019</strong></p>         
+ </p>
+      
 <hr>
 
 <h2>
