--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
 
 <p style="text-align:justify; text-justify:inter-ideograph;">
- <p><strong>BSc. in Physics, zzz University　June 2013</strong></p>
- <p><strong>MSc. in Computer Science, yyy of kkk　　　　　　　Oct. 2019</strong></p>         
+<strong>BSc. in Physics, zzz University　June 2013</strong>
+  <br>
+<strong>MSc. in Computer Science, yyy of kkk　　　　　　　Oct. 2019</strong>         
  </p>
       
 <hr>
@@ -172,8 +173,8 @@
 
 <aside id="sidebar">
 
-<br> </br>         
-<p><font size=3>Knowledge & Skill</font>
+<br>         
+<p><font size=3><strong>Knowledge & Skill</strong> </font>
 </p>
 <p><strong>Machine Learning</strong></p>
 <ul>
