--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
 
 
-<p style="text-align:justify; text-justify:inter-ideograph;">
-<strong>BSc. in Physics, zzz University　June 2013</strong>
+<p>
+  
+<span> <strong>BSc. in Physics, zzz University June 2013</strong> </span>
   <br>
-<strong>MSc. in Computer Science, yyy of kkk　　　　　　　Oct. 2019</strong>         
+<span> <strong>MSc. in Computer Science, yyy of kkk Oct. 2019</strong>      </span>    
  </p>
       
 <hr>
