--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 <p>
   
-<span> <strong>BSc. in Physics, zzz University June 2013</strong> </span>
+BSc. in Physics, zzz University &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; June 2013
   <br>
-<span> <strong>MSc. in Computer Science, yyy of kkk Oct. 2019</strong>      </span>    
+MSc. in Computer Science, yyy of kkk &emsp; &emsp; &emsp; &emsp; &emsp; Oct. 2019  
  </p>
       
 <hr>
