--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 <p>
   
-BSc. in Physics, zzz University &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; June 2013
+June 2013 &emsp;&emsp;BSc. in Physics, zzz University 
   <br>
-MSc. in Computer Science, yyy of kkk &emsp; &emsp; &emsp; &emsp; &emsp; Oct. 2019  
+ Oct. 2019  &emsp; &emsp;MSc. in Computer Science, yyy of kkk 
  </p>
       
 <hr>
