--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <header>
       <div class="inner">
         <h1>Resume</h1>
-        <h2>Email: xxx(at)mail.com</h2>
         <a href="https://github.com/yhwei/resumelaterversion" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -199,7 +198,11 @@ June 2013 &emsp;&emsp;BSc. in Physics, zzz University
 
 
 
-    
+  <p><Contact Information </strong></p>
+<ul>
+  <li>Email: xxxx(at)gmail(dot)com </li>
+  <li>Phone: 137XXXXXXX </li>
+  </ul>
 
          
   </aside>
