--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 June 2013 &emsp;&emsp;BSc. in Physics, zzz University 
   <br>
  Oct. 2019  &emsp; &emsp;MSc. in Computer Science, yyy of kkk 
+  <br>
+  <ul>
+    <li>Research Assistant at xxxx  &emsp; &emsp; &emsp;Dec. 2018 - Feb. 2019
+
+      </li>
+          </ul>
  </p>
       
 <hr>
@@ -198,7 +204,7 @@ June 2013 &emsp;&emsp;BSc. in Physics, zzz University
 
 
 
-  <p><Contact Information </strong></p>
+  <p>Contact Information </strong></p>
 <ul>
   <li>Email: xxxx(at)gmail(dot)com </li>
   <li>Phone: 137XXXXXXX </li>
