--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ June 2013 &emsp;&emsp;BSc. in Physics, zzz University
 <ul>
 <li>Clustering, Logistic Regression, Decision Tree, Random Forest, SVM, etc. </li>
 </ul>
-<p><strong><p>Statistics, A/B Testing </strong></p>
+<p><strong><p>Statistics, A/B Testing, Causal Inference </strong></p>
           
 <p><strong>Programming & System</strong></p>
 <ul>
