--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@ June 2013 &emsp;&emsp;BSc. in Physics, zzz University
   <br>
  Oct. 2019  &emsp; &emsp;MSc. in Computer Science, yyy of kkk 
   <br>
-  <ul>
-    <li>Research Assistant at xxxx  &emsp; &emsp; &emsp;Dec. 2018 - Feb. 2019
-
-      </li>
-          </ul>
+ Dec. 2018 - Feb. 2019 &emsp; &emsp;Research Assistant at xxxx 
  </p>
       
 <hr>
