--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 
 <p>
   
-June 2013 &emsp;&emsp;BSc. in Physics, zzz University 
+BSc. in Physics, zzz University &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <div align="right">June 2013 </div>
   <br>
- Oct. 2019  &emsp; &emsp;MSc. in Computer Science, yyy of kkk 
+MSc. in Computer Science, yyy of kkk <div align="right"> Oct. 2019  </div>
   <br>
- Dec. 2018 - Feb. 2019 &emsp; &emsp;Research Assistant at xxxx 
+
+Research Assistant at xxxx  <div align="right"> Dec. 2018 - Feb. 2019 </div>
  </p>
       
 <hr>
@@ -198,14 +199,14 @@ June 2013 &emsp;&emsp;BSc. in Physics, zzz University
 <ul>
   <li>Native speaker of Cantonese and Mandarin, proficiency in English </li>
 
+  </ul>
 
 
-  <p>Contact Information </strong></p>
+<p>Contact Information </strong></p>
 <ul>
   <li>Email: xxxx(at)gmail(dot)com </li>
   <li>Phone: 137XXXXXXX </li>
-  </ul>
-
+</ul>
          
   </aside>
       </div>
