--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
 <p>
   
-BSc. in Physics, zzz University &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <div align="right">June 2013 </div>
+BSc. in Physics, zzz University &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; June 2013 
  
-MSc. in Computer Science, yyy of kkk <div align="right"> Oct. 2019  </div>
+MSc. in Computer Science, yyy of kkk &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Oct. 2019  
 
 
-Research Assistant at xxxx  <div align="right"> Dec. 2018 - Feb. 2019 </div>
+Research Assistant at xxxx  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Dec. 2018 - Feb. 2019 
  </p>
       
 <hr>
@@ -202,7 +202,7 @@ Research Assistant at xxxx  <div align="right"> Dec. 2018 - Feb. 2019 </div>
   </ul>
 
 
-<p>Contact Information </strong></p>
+<p><strong>Contact Information </strong></p>
 <ul>
   <li>Email: xxxx(at)gmail(dot)com </li>
   <li>Phone: 137XXXXXXX </li>
