--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 <p>
   
 BSc. in Physics, zzz University &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; June 2013 
- 
+ <br>
 MSc. in Computer Science, yyy of kkk &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Oct. 2019  
 
-
+ <br>
 Research Assistant at xxxx  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Dec. 2018 - Feb. 2019 
  </p>
       
@@ -81,7 +81,7 @@ Research Assistant at xxxx  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Dec. 2018 - Feb.
 <ul>
 <li>Set up A/B testing framework by Google Optimize, save technical service budget 
 </li>
-<li>Design experiment for website design, improve user experience and potential customer’s conversion
+<li>Design and analyze experiment for website design, improve user experience and potential customer’s conversion
 </li>
 </ul>
 
