--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   </ul>
 
 
-<p><strong>Contact Information </strong></p>
+<p><font size=3><strong>Contact Information </strong></font></p>
 <ul>
   <li>Email: xxxx(at)gmail(dot)com </li>
   <li>Phone: 137XXXXXXX </li>
