--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 <h2>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
 
-<div class="box">
 
 
-<p>
+<p style="text-align:justify;
+text-justify:inter-ideograph;>
   
-  <span>BSc. in Physics, zzz University &emsp;&emsp; June 2013 </span>
+BSc. in Physics, zzz University &emsp;&emsp; June 2013
  <br>
-  <span> MSc. in Computer Science, yyy of kkk &emsp;&emsp; Oct. 2019  </span>
+MSc. in Computer Science, yyy of kkk &emsp;&emsp; Oct. 2019 
 
  <br>
-  <span> Research Assistant at xxxx  &emsp;&emsp; Dec. 2018 - Feb. 2019   </span> 
+Research Assistant at xxxx  &emsp;&emsp; Dec. 2018 - Feb. 2019 
  </p>
- </div> 
+
           
 <hr>
 
